--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-
+PORT=4000
 MONGO_URI=mongodb+srv://megaman:test123@nodejscourse.vcfm8wo.mongodb.net/?retryWrites=true&w=majority
 SECRET=ghrbbvuh4b3984894hfrb
