--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "proxy": "http://localhost:4000",
+  "homepage": ".",
   "name": "yet-another-blog",
   "version": "0.1.0",
   "private": true,
