--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "loader-utils": "^3.2.1",
+    "node-fetch": "^3.3.0",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
